# evernote-to-gdrive

./: .gitignore  CLAUDE.md  LICENSE  README.md  REQUIREMENTS.md  evernote-to-gdrive.spec  pyproject.toml  setup.py  test_drive_image_embed.py  test_html_import.py
.claude/: settings.json
.github/workflows/: build-binaries.yml  publish-pypi.yml
docs/: google-credentials-setup.md
scripts/: compare_counts.py  list_drive_tree.py  pyinstaller_entry.py
src/evernote_to_gdrive/: _docx_builder.py  _enml.py  _runtime_paths.py  _startup.py  analyze.py  analyze_links.py  analyze_reports.py  auth.py  classifier.py  cli.py  csv_table.py  dispatch.py  display.py  drive_attachments.py  drive_files.py  drive_folders.py  drive_retry.py  drive_writer.py  gdoc.py  gdoc_html.py  interlinks.py  local_writer.py  migrate.py  models.py  parser.py  webclip.py
src/evernote_to_gdrive/_bundled_auth/: __init__.py
src/evernote_to_google/: _docx_builder.py  _enml.py  _image.py  analyze.py  analyze_reports.py  auth.py  classifier.py  cli.py  dispatch.py  display.py  docs.py  drive.py  gdrive_writer.py  interlinks.py  local_writer.py  migrate.py  models.py  parser.py  report_links.py
tests/: test_enml.py
tests/assets/: plain.docx
tests/e2e/: conftest.py  helpers.py  test_analyze.py  test_auth.py  test_cli_errors.py  test_extended.py  test_gdrive_sanity.py  test_local_sanity.py  test_migrate_flags.py  test_resume_skip.py  test_sanity_negative.py  test_webclip_real.py
tests/input/extended/: Extended Notebook.enex
tests/input/sanity/: Sanity Notebook.enex
tests/input/sanity/Test Stack/: Stacked Notebook.enex
tests/input/webclip/: Web Clips.enex
tests/setup/: enex_builder.py  generate_fixtures.py
