[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evernote-to-gdrive"
version = "0.1.0"
description = "Migrate Evernote notes to Google Drive"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "lxml>=5.0",
    "google-api-python-client>=2.100",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.1",
    "rich>=13.0",
    "html2text>=2024.2",
    "html4docx @ git+https://github.com/dfop02/html4docx.git",
    "python-docx>=1.1",
]

[project.scripts]
evernote-to-gdrive = "evernote_to_google.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
